# CS-Workbench

./: .gitmodules  README.md  pyproject.toml
.devcontainer/: devcontainer.json  dockerfile
.devcontainer/scripts/: check-git-status.zsh  install-colour.zsh  post-create.zsh  post-start.zsh  postcreate.zsh  poststart.zsh
