[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Unknown"]

[tool.poetry.dependencies]
requests = "^2.31.0"
python = "~3.12"
colour-science = "*"
colour-datasets = "*"
colour-specio = "*"
numpy = "^1.25.0"
scipy = "^1.10.1"
xxhash = "^3.2.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
pandas = "^2.0.3"
opencv-python = "^4.8.1.78"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
black = "^23.3.0"
pytest = "^7.4.0"
pytest-xdist = "^3.3.1"
pyright = "^1.1.332"
ruff = "^0.1.0"
flynt = "^1.0.1"
isort = "^5.12.0"
ipykernel = "^6.29.0"
colour-science = { path = "colour-science", develop = true }
colour-datasets = { path = "colour-datasets", develop = true }
colour-specio = { path = "colour-specio", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
